--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:17
 WORKDIR /app
 
-COPY package*.json /app
+COPY package*.json /app/
 RUN npm install
 
-COPY . /app
+COPY . /app/
 CMD ["npm", "start"]
