--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.21-alpine
 COPY . /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx/nginx.conf /etc/nginx/conf.d
+COPY nginx/nginx.conf /etc/nginx/conf.d/
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
