--- a/api/.env
+++ b/api/.env
@@ -7,9 +7,7 @@ DISCORD_REDIRECT_URI="http://YOUR_URL_8080_OR_PROXY/api/discord/login"
 DISCORD_BOT_TOKEN=
 FRONTEND_URL="http://YOUR_URL_8080_OR_PROXY/admin/valuated-messages"
 SESSION_SECRET=
-
-# ENCRYPTION KEY HAS TO BE 32 CHARS!
-ENCRYPTION_KEY=
+TWOFA_KEY=
 
 ## DO NOT EDIT BELOW
 WEBSOCKET_PORT=8086
