--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:1.21-alpine
-COPY . /usr/share/nginx/html
+
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx/nginx.conf /etc/nginx/conf.d/
-EXPOSE 80
+COPY nginx/nginx.conf /etc/nginx/conf.d
+
+EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
