--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wagmi-media-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "grep '^VUE_APP_' ../.env > .env && vue-cli-service serve",
+    "build": "grep '^VUE_APP_' ../.env > .env && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
