--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,10 @@ services:
         ports:
             - 3306:3306
         environment:
-            MYSQL_ROOT_PASSWORD: CHANGE_HERE
-            MYSQL_USER: CHANGE_HERE
-            MYSQL_PASSWORD: CHANGE_HERE
-            MYSQL_DATABASE: CHANGE_HERE
+            MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+            MYSQL_USER: ${DATABASE_USER}
+            MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+            MYSQL_DATABASE: ${DATABASE_DBNAME}
         volumes:
             - ./mysql/setup.sql:/docker-entrypoint-initdb.d/setup.sql
             - ./volumes/db/data:/var/lib/mysql
@@ -21,9 +21,19 @@ services:
             - 8081:8081
             - 8086:8086
         environment:
-            MYSQL_USER: CHANGE_HERE
-            MYSQL_PASSWORD: CHANGE_HERE
-            MYSQL_DATABASE: CHANGE_HERE
+            DATABASE_USER: ${DATABASE_USER}
+            DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+            DATABASE_DBNAME: ${DATABASE_DBNAME}
+            API_KEY: ${API_KEY}
+            API_AUTHORIZED_DISCORD_IDS: ${API_AUTHORIZED_DISCORD_IDS}
+            API_DISCORD_CLIENT_ID: ${API_DISCORD_CLIENT_ID}
+            API_DISCORD_CLIENT_SECRET: ${API_DISCORD_CLIENT_SECRET}
+            API_DISCORD_REDIRECT_URI: ${API_DISCORD_REDIRECT_URI}
+            API_FRONTEND_URL: ${API_FRONTEND_URL}
+            API_SESSION_SECRET: ${API_SESSION_SECRET}
+            API_TWOFA_KEY: ${API_TWOFA_KEY}
+            BOT_TOKEN: ${BOT_TOKEN}
+            BOT_GUILD_ID: ${BOT_GUILD_ID}
         depends_on:
             - db
         volumes:
@@ -32,7 +42,12 @@ services:
         build: ./bot
         restart: always
         ports:
-            - 8083:8083
+            - 8085:8085
+        environment:
+            API_KEY: ${API_KEY}
+            BOT_TOKEN: ${BOT_TOKEN}
+            BOT_GUILD_ID: ${BOT_GUILD_ID}
+            BOT_PREFIX: ${BOT_PREFIX}
         depends_on:
             - db
             - api
