--- a/report/package.json
+++ b/report/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "wagmi-media-client",
+  "name": "wagmi-media-report",
   "version": "1.0.4",
   "scripts": {
-    "serve": "grep '^VUE_APP_' ../.env > .env && vue-cli-service serve",
-    "build": "grep '^VUE_APP_' ../.env > .env && vue-cli-service build",
+    "serve": "grep '^VUE_APP_API_URL' ../.env > .env && vue-cli-service serve",
+    "build": "grep '^VUE_APP_API_URL' ../.env > .env && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -17,13 +17,10 @@
     "d3-scale-chromatic": "^3.0.0",
     "moment": "^2.29.3",
     "postcss": "^7.0.39",
-    "socket.io-client": "^4.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
     "vue-loading-overlay": "^3.4.2",
     "vue-multiselect": "^2.1.6",
-    "vue-notification": "^1.3.20",
-    "vue-router": "^3.2.0",
     "vue2-datepicker": "^3.10.4",
     "vuetable-2": "^1.7.5"
   },
