--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagmi-media-api",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,13 +11,13 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "node-2fa": "^2.0.3",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.4.1",
-    "web3": "^1.7.3"
+    "web3": "^1.7.3",
+    "winston": "^3.7.2"
   }
 }
