--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagmi-media-bot",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "scripts": {
     "start": "node index.js"
   },
@@ -9,10 +9,10 @@
     "@polkadot/util-crypto": "^8.5.1",
     "axios": "^0.26.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
     "http": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "polkadot": "^1.0.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "winston": "^3.7.2"
   }
 }
