--- a/.env
+++ b/.env
@@ -16,5 +16,6 @@ DATABASE_PASSWORD=
 DATABASE_USER=
 DATABASE_DBNAME=
 VUE_APP_API_URL="http://YOUR_URL_8080_OR_PROXY/api/"
+VUE_APP_API_REPORT_URL="http://YOUR_URL_8082_OR_PROXY/api/"
 VUE_APP_WEBSOCKET_URL="http://YOUR_URL_8080_OR_PROXY/"
 VUE_APP_DISCORD_OAUTH_URL=
