--- a/report/nginx/nginx.conf
+++ b/report/nginx/nginx.conf
@@ -1,3 +1,8 @@
+upstream docker-api {
+    server api:8081;
+}
+
+
 server {
     listen 8082;
 
@@ -7,4 +12,21 @@ server {
 
         try_files $uri /index.html; 
     }
+
+     location /api/treasuries/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_pass http://docker-api/api/treasury/public;
+    }
+
+    location /api/valuations/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_pass http://docker-api/api/valuation/public;
+    }
+
 }
