--- a/report/package.json
+++ b/report/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wagmi-media-report",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "scripts": {
-    "serve": "grep '^VUE_APP_API_URL' ../.env > .env && vue-cli-service serve",
-    "build": "grep '^VUE_APP_API_URL' ../.env > .env && vue-cli-service build",
+    "serve": "grep '^VUE_APP_API_REPORT_URL' ../.env > .env && vue-cli-service serve",
+    "build": "grep '^VUE_APP_API_REPORT_URL' ../.env > .env && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-multiselect": "^2.1.6",
     "vue2-datepicker": "^3.10.4",
-    "vuetable-2": "^1.7.5"
+    "vuetify": "^2.6.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
