--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@ ENVIRONMENT=production
 
 API_KEY=
 API_AUTHORIZED_DISCORD_IDS=
+API_COOKIE_DOMAIN=
+API_COOKIE_PATH=
 API_DISCORD_CLIENT_ID=
 API_DISCORD_CLIENT_SECRET=
-API_DISCORD_REDIRECT_URI="http://YOUR_URL_8080_OR_PROXY/api/discord/login"
-API_FRONTEND_URL="http://YOUR_URL_8080_OR_PROXY/admin/valuated-messages"
+API_DISCORD_REDIRECT_URI=http://YOUR_URL_8080_OR_PROXY/api/discord/login
+API_FRONTEND_URL=http://YOUR_URL_8080_OR_PROXY/admin/valuated-messages
 API_SESSION_SECRET=
 API_TWOFA_KEY=
 BOT_TOKEN=
@@ -15,7 +17,7 @@ DATABASE_ROOT_PASSWORD=
 DATABASE_PASSWORD=
 DATABASE_USER=
 DATABASE_DBNAME=
-VUE_APP_API_URL="http://YOUR_URL_8080_OR_PROXY/api/"
-VUE_APP_API_REPORT_URL="http://YOUR_URL_8082_OR_PROXY/api/"
-VUE_APP_WEBSOCKET_URL="http://YOUR_URL_8080_OR_PROXY/"
+VUE_APP_API_URL=http://YOUR_URL_8080_OR_PROXY/api/
+VUE_APP_API_REPORT_URL=http:/YOUR_URL_8082_OR_PROXY/api/
+VUE_APP_WEBSOCKET_URL=http://YOUR_URL_8080_OR_PROXY/
 VUE_APP_DISCORD_OAUTH_URL=
