--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagmi-media-api",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "node-2fa": "^2.0.3",
+    "secure-compare": "^3.0.1",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.4.1",
     "web3": "^1.7.3",
