--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
     db:
         container_name: db
-        image: mariadb:10.5.8
+        image: mariadb:10.5.16
         restart: always
         command: --default-authentication-plugin=mysql_native_password
         ports:
@@ -35,6 +35,8 @@ services:
             API_FRONTEND_URL: ${API_FRONTEND_URL}
             API_SESSION_SECRET: ${API_SESSION_SECRET}
             API_TWOFA_KEY: ${API_TWOFA_KEY}
+            API_COOKIE_DOMAIN: ${API_COOKIE_DOMAIN}
+            API_COOKIE_PATH: ${API_COOKIE_PATH}
             BOT_TOKEN: ${BOT_TOKEN}
             BOT_GUILD_ID: ${BOT_GUILD_ID}
         depends_on:
