--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,3 +1,5 @@
+server_tokens off;
+
 upstream docker-api {
     server api:8081;
 }
@@ -8,6 +10,8 @@ upstream docker-api-ws {
 
 server {
     listen 8080;
+    
+    add_header X-Frame-Options SAMEORIGIN always;
 
     location / {
         root   /usr/share/nginx/html;
