--- a/report/conf/nginx/conf.d/default.conf
+++ b/report/conf/nginx/conf.d/default.conf
@@ -2,9 +2,14 @@ upstream docker-api {
     server api:8081;
 }
 
-
 server {
     listen 8082;
+
+    add_header X-Frame-Options SAMEORIGIN always;
+    more_clear_headers Server; 
+
+    modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
     location / {
         root   /usr/share/nginx/html;
