--- a/report/conf/nginx/conf.d/default.conf
+++ b/report/conf/nginx/conf.d/default.conf
@@ -10,14 +10,10 @@ server {
     modsecurity on;
     modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        try_files $uri /index.html; 
-    }
-
-     location /api/treasuries/ {
+    location /api/treasuries/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
