--- a/report/conf/nginx/nginx.conf
+++ b/report/conf/nginx/nginx.conf
@@ -36,7 +36,7 @@ http {
     gzip                on;
     gzip_vary           on;
     gzip_proxied        any;
-    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css text/plain image/x-icon image/svg+xml;
+    gzip_types          application/javascript application/x-javascript text/javascript text/css text/plain image/x-icon image/svg+xml;
     gzip_buffers        4 16k;
     gzip_comp_level     6;
     gzip_min_length     256;
