--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagmi-media-api",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-writer": "^1.6.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
